# docker.minimal-cmake-example

./: Dockerfile  Dockerfile.ubuntu  Dockerfile.windows  README.md  build-and-run.ps1  build-and-run_ubuntu.sh  build-and-run_windows.bat  compose.ubuntu.yml  compose.windows.yml  compose.yml
app/: CMakeLists.txt  CMakePresets.json  build-and-run.ps1  build-and-run.sh
app/src/: main.cpp
docker/windows/: vscomponents.ps1
