cmake_minimum_required(VERSION 3.28)
set(CMAKE_CXX_SCAN_FOR_MODULES OFF)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/toolchain/default.cmake")

project($ENV{CMAKE_PROJECT_NAME} LANGUAGES CXX)
add_definitions(-DCMAKE_PROJECT_NAME="$ENV{CMAKE_PROJECT_NAME}")
add_executable(${PROJECT_NAME} main.cpp)
